--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
     const gitalk = new Gitalk({
       clientID: 'cb4f79c2e0b26f3e5f71',
       clientSecret: '5e219ea4159ed82b7725bc05bf8d494da79c9a9e',
-      repo: 'LearningBase',
-      owner: 'Afauria',
-      admin: ['Afauria'],
+      repo: 'note',
+      owner: 'NiuLiJun8',
+      admin: ['NiuLiJun8'],
       // facebook-like distraction free mode
       distractionFreeMode: false
     })
