--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       subMaxLevel: 3, // 设置侧边栏目录的最大层级，自定义侧边栏之后，不会再根据标题层级渲染
 
-      coverpage: true, // 设置封面页，默认加载_coverpage.md，也可以自定义文件名
+      coverpage: false, // 设置封面页，默认加载_coverpage.md，也可以自定义文件名
 
 
       //--------插件配置--------
