--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       name: "Android", // 侧边栏顶部显示文档标题
       // logo: "/_media/logo.png", // 侧边栏顶部显示logo
 
-      repo: "NiuLiJun8/note", //右上角出现GitHub Corner
+      repo: "NiuLiJun8/NiuLiJun8.github.io", //右上角出现GitHub Corner
 
       loadNavbar: true, // 定制导航栏，默认加载_navbar.md，也可以自定义文件名
 
