--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       // themeColor: '#EF91B5', // 设置主题色
 
-      name: "Android", // 侧边栏顶部显示文档标题
+      name: "Knowledge", // 侧边栏顶部显示文档标题
       // logo: "/_media/logo.png", // 侧边栏顶部显示logo
 
       repo: "NiuLiJun8/NiuLiJun8.github.io", //右上角出现GitHub Corner
