--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       notFoundPage: true, // 定制404页面，默认加载_404.md，也可以自定义文件名
 
-      maxLevel: 4, // 设置侧边栏标题的最大层级，默认情况下，侧边栏会抓取文档中的标题渲染成目录，最多为6级
+      // maxLevel: 4, // 设置侧边栏标题的最大层级，默认情况下，侧边栏会抓取文档中的标题渲染成目录，最多为6级
 
       subMaxLevel: 3, // 设置侧边栏目录的最大层级，自定义侧边栏之后，不会再根据标题层级渲染
 
